--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
   intl: ^0.18.0
+  syncfusion_flutter_charts: ^28.2.7
 
 
 dev_dependencies:
