--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,17 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
+  table_calendar: ^3.0.9
   intl: ^0.18.0
   syncfusion_flutter_charts: ^28.2.7
+
+
 
 
 dev_dependencies:
